--- a/src/views/DA-CN/Game/lucky-wheel/wheel.css
+++ b/src/views/DA-CN/Game/lucky-wheel/wheel.css
@@ -1,7 +1,11 @@
 .game-box {
 	width: 550px;
 	margin: 0 auto;
-	padding-top: 450px;
+	padding-top: 100px;
+}
+
+.main {
+	height: 100%;
 }
 
 .reset-btn {
@@ -29,13 +33,13 @@
 	color: white;
 }
 
-.reward {
+.wheel__reward {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	width: 800px;
 	height: 500px;
-	/* margin-top: -250px;*/
+	margin-top: -250px;
 	margin-left: -400px;
 	z-index: 100;
 	background: white;
@@ -46,11 +50,11 @@
 	border-radius: 15px;
 }
 
-.reward p {
+.wheel__reward p {
 	font-size: 25px;
 }
 
-.reward img {
+.wheel__reward img {
 	width: 225px;
 }
 
@@ -80,4 +84,15 @@
 	z-index: 50;
 	width: 100%;
 	height: 100%;
+}
+
+.main {
+	margin: 0 auto;
+	background-image: url('./images/background.jpg');
+	width: 100%;
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	background-position: 50% 20%;
+	overflow: hidden;
+	padding-bottom: 100px;
 }
